--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^17.0.1",
     "exceljs": "^4.4.0",
     "express": "^5.1.0",
+    "express-session": "^1.18.2",
     "mongoose": "^8.16.1",
     "multer": "^2.0.1",
     "mysql2": "^3.14.1",
