--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -1,9 +1,9 @@
 name: Build Windows Installer
 
 on:
-  workflow_dispatch:      # lets you run it manually from GitHub UI
+  workflow_dispatch:        # manual run button
   push:
-    branches: [ main ]    # change "main" to your default branch if different
+    branches: [ main ]      # change if your default branch is different
 
 jobs:
   build-win:
@@ -18,26 +18,64 @@ jobs:
         with:
           node-version: 20
 
-      # Try fast, reproducible install if lockfile exists
-      - name: Install dependencies (root)
-        run: npm ci
-        continue-on-error: true
+      - name: Show versions
+        run: |
+          node -v
+          npm -v
 
-      # Fallback if no lockfile
-      - name: Install dependencies (fallback)
-        if: ${{ failure() }}
-        run: npm install
+      # ----- Install deps in all 3 places: root, client, server -----
+      - name: Install root dev deps (electron, builder, etc.)
+        run: |
+          if exist package-lock.json (
+            npm ci
+          ) else (
+            npm install
+          )
 
-      # Build React + package Electron (produces dist/*.exe)
-      # We unset CI so CRA doesn't fail on warnings.
-      - name: Build & package Windows installer
-        run: npm run dist
+      - name: Install client deps
+        run: |
+          if exist client\\package-lock.json (
+            npm ci --prefix client
+          ) else (
+            npm install --prefix client
+          )
+
+      - name: Install server deps (better-sqlite3 here)
+        run: |
+          if exist server\\package-lock.json (
+            npm ci --prefix server
+          ) else (
+            npm install --prefix server
+          )
+
+      # ----- Build the React app -----
+      - name: Build React
+        run: npm --prefix client run build
         env:
-          CI: ""
+          CI: ""   # don't fail on CRA warnings
 
-      # Upload the .exe as an artifact to download
+      # ----- Rebuild native module for Electron (better-sqlite3) -----
+      # This ensures server/node_modules/better-sqlite3 matches Electron's ABI.
+      - name: Rebuild better-sqlite3 for Electron
+        run: |
+          npx electron-rebuild -f -w better-sqlite3 --module-dir server
+        env:
+          # electron-rebuild auto-detects Electron version from devDeps
+          npm_config_build_from_source: "false"
+
+      # ----- Package the app (uses root package.json "build" config) -----
+      - name: Package Windows (electron-builder)
+        run: |
+          npx electron-builder --win nsis
+        env:
+          NODE_ENV: production
+          CI: ""   # keep CRA warnings from breaking anything if builder triggers a rebuild
+
+      # ----- Upload the installer (.exe) -----
       - name: Upload installer artifact
         uses: actions/upload-artifact@v4
         with:
           name: windows-installer
-          path: dist\*Setup*.exe
+          path: |
+            dist\*Setup*.exe
+            dist\*.exe
