--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -3,11 +3,14 @@ name: Build Windows Installer
 on:
   workflow_dispatch:
   push:
-    branches: [ main ]   # change if your default branch isn't 'main'
+    branches: [ main ]
 
 jobs:
   build-win:
-    runs-on: windows-latest
+    runs-on: windows-2022
+    defaults:
+      run:
+        shell: pwsh
 
     steps:
       - name: Checkout
@@ -17,7 +20,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'npm'
+          cache: npm
           cache-dependency-path: |
             package-lock.json
             client/package-lock.json
@@ -25,82 +28,64 @@ jobs:
 
       - name: Show versions
         run: |
-          node -v
-          npm -v
+          node -v | Tee-Object -FilePath build-log.txt
+          npm -v  | Tee-Object -FilePath build-log.txt -Append
 
-      - name: Show repo layout (sanity check)
+      - name: Install root deps (ci → fallback)
         run: |
-          echo === root ===
-          dir
-          echo === client ===
-          if exist client (dir client) else (echo ERROR: client folder missing & exit 1)
-          echo === server ===
-          if exist server (dir server) else (echo ERROR: server folder missing & exit 1)
-          echo === assets (icons) ===
-          if exist assets (dir assets) else (echo NOTE: assets folder missing)
+          npm ci 2>&1 | Tee-Object -FilePath build-log.txt -Append
+          if ($LASTEXITCODE -ne 0) {
+            "npm ci failed; running npm install..." | Tee-Object -FilePath build-log.txt -Append
+            npm install 2>&1 | Tee-Object -FilePath build-log.txt -Append
+          }
 
-      # ---------- Install deps (root, client, server) ----------
-      - name: Install root deps (ci)
-        run: npm ci
-        continue-on-error: true
-      - name: Install root deps (fallback)
-        if: ${{ failure() }}
-        run: npm install
+      - name: Install client deps (ci → fallback)
+        run: |
+          npm ci --prefix client 2>&1 | Tee-Object -FilePath build-log.txt -Append
+          if ($LASTEXITCODE -ne 0) {
+            "npm ci (client) failed; running npm install..." | Tee-Object -FilePath build-log.txt -Append
+            npm install --prefix client 2>&1 | Tee-Object -FilePath build-log.txt -Append
+          }
 
-      - name: Install client deps (ci)
-        run: npm ci --prefix client
-        continue-on-error: true
-      - name: Install client deps (fallback)
-        if: ${{ failure() }}
-        run: npm install --prefix client
+      - name: Install server deps (ci → fallback)
+        run: |
+          npm ci --prefix server 2>&1 | Tee-Object -FilePath build-log.txt -Append
+          if ($LASTEXITCODE -ne 0) {
+            "npm ci (server) failed; running npm install..." | Tee-Object -FilePath build-log.txt -Append
+            npm install --prefix server 2>&1 | Tee-Object -FilePath build-log.txt -Append
+          }
 
-      - name: Install server deps (ci)
-        run: npm ci --prefix server
-        continue-on-error: true
-      - name: Install server deps (fallback)
-        if: ${{ failure() }}
-        run: npm install --prefix server
-
-      # ---------- Build React (avoid CRA warnings-as-errors) ----------
-      - name: Build client
-        run: npm --prefix client run build
+      # Your "dist" script already runs "build:react" + electron-builder
+      - name: Build and package (electron-builder, verbose)
         env:
-          CI: ""   # prevents CRA from failing on warnings
-
-      # ---------- Figure out Electron version & rebuild better-sqlite3 ----------
-      - name: Compute Electron version
-        id: ele
-        shell: bash
+          ELECTRON_BUILDER_LOG_LEVEL: debug
+          DEBUG: electron-builder
+          CI: ""   # prevents CRA warnings-as-errors
+          NODE_ENV: production
         run: |
-          VER=$(node -p "require('./package.json').devDependencies.electron.replace('^','')")
-          echo "version=$VER" >> $GITHUB_OUTPUT
+          npm run dist 2>&1 | Tee-Object -FilePath build-log.txt -Append
 
-      - name: Rebuild better-sqlite3 for Electron
+      - name: Diagnostic listing
+        if: always()
         run: |
-          echo Electron target: ${{ steps.ele.outputs.version }}
-          npm rebuild better-sqlite3 --runtime=electron --target=${{ steps.ele.outputs.version }} --disturl=https://electronjs.org/headers --build-from-source
-          npx electron-builder install-app-deps
-        env:
-          npm_config_msvs_version: "2022"
+          "=== Dist tree ===" | Tee-Object -FilePath build-log.txt -Append
+          if (Test-Path dist) {
+            Get-ChildItem dist -Recurse -Force | Out-String | Tee-Object -FilePath build-log.txt -Append
+          } else {
+            "dist directory not found" | Tee-Object -FilePath build-log.txt -Append
+          }
 
-      # ---------- Package Windows (.exe) with verbose logs ----------
-      - name: Package Windows (.exe)
-        run: |
-          $env:DEBUG="electron-builder"
-          $env:ELECTRON_BUILDER_LOG_LEVEL="debug"
-          $env:CI=""
-          npm run dist 2>&1 | Tee-Object -FilePath build-log.txt
-        shell: powershell
-
-      # ---------- Upload the installer & logs (even on failure) ----------
-      - name: Upload installer
+      - name: Upload installers and metadata
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: windows-installer
           path: |
-            dist\*Setup*.exe
-            dist\*.exe
+            dist\**\*.exe
+            dist\**\*.msi
+            dist\latest.yml
+            dist\builder-effective-config.yaml
+          if-no-files-found: warn
 
       - name: Upload build log
         if: always()
@@ -108,3 +93,4 @@ jobs:
         with:
           name: build-log
           path: build-log.txt
+          if-no-files-found: warn
