--- a/package.json
+++ b/package.json
@@ -6,19 +6,26 @@
   "private": true,
   "main": "electron/main.js",
   "scripts": {
-    "postinstall": "electron-builder install-app-deps",
     "dev:client": "cross-env PORT=3000 npm --prefix client start",
     "dev:server": "cross-env NODE_ENV=development npm --prefix server run dev",
     "dev:electron": "wait-on tcp:3000 tcp:5000 && electron .",
     "dev": "concurrently -k \"npm:dev:server\" \"npm:dev:client\" \"npm:dev:electron\"",
+
     "build:react": "cross-env PUBLIC_URL=. npm --prefix client run build",
-    "clean:all": "rm -rf node_modules package-lock.json client/node_modules client/package-lock.json server/node_modules server/package-lock.json",
-    "prep:root": "npm install",
-    "prep:client": "npm --prefix client install",
-    "prep:server:electron": "npm_config_runtime=electron npm_config_target=31.3.0 npm_config_disturl=https://electronjs.org/headers npm --prefix server install",
-    "rebuild:server:electron": "npx electron-rebuild -f -w better-sqlite3 --module-dir ./server -v 31.3.0",
-    "prepack": "npm run prep:root && npm run prep:client && npm run prep:server:electron && npm run rebuild:server:electron && npm run build:react",
-    "predist": "npm run prep:root && npm run prep:client && npm run prep:server:electron && npm run rebuild:server:electron && npm run build:react",
+
+    "clean:all": "rimraf node_modules package-lock.json client/node_modules client/package-lock.json server/node_modules server/package-lock.json",
+
+    "prep:root": "npm ci || npm install",
+    "prep:client": "npm --prefix client ci || npm --prefix client install",
+    "prep:server:electron": "cross-env npm_config_runtime=electron npm_config_target=31.3.0 npm_config_disturl=https://electronjs.org/headers npm --prefix server ci || npm --prefix server install",
+
+    "rebuild:server:electron": "cross-env ELECTRON_REBUILD_USE_PREBUILD=1 electron-rebuild -f -w better-sqlite3 --module-dir ./server -v 31.3.0",
+
+    "deps:electron": "npx --yes electron-builder install-app-deps",
+
+    "prepack": "npm run prep:root && npm run prep:client && npm run prep:server:electron && npm run rebuild:server:electron && npm run build:react && npm run deps:electron",
+    "predist": "npm run prep:root && npm run prep:client && npm run prep:server:electron && npm run rebuild:server:electron && npm run build:react && npm run deps:electron",
+
     "pack": "cross-env NODE_ENV=production electron-builder --dir",
     "dist": "cross-env NODE_ENV=production electron-builder --publish=never"
   },
@@ -31,18 +38,9 @@
       "package.json"
     ],
     "extraResources": [
-      {
-        "from": "client/build",
-        "to": "client/build"
-      },
-      {
-        "from": "server",
-        "to": "server"
-      },
-      {
-        "from": "server/node_modules",
-        "to": "server/node_modules"
-      }
+      { "from": "client/build", "to": "client/build" },
+      { "from": "server", "to": "server" },
+      { "from": "server/node_modules", "to": "server/node_modules" }
     ],
     "asar": true,
     "asarUnpack": [
@@ -52,13 +50,15 @@
     "directories": {
       "buildResources": "assets"
     },
+    "npmRebuild": true,
+    "mac": {
+      "target": [ "dmg" ],
+      "category": "public.app-category.business"
+    },
     "win": {
-      "target": [
-        "nsis"
-      ],
+      "target": [ "nsis" ],
       "icon": "assets/icon.ico"
     },
-    "npmRebuild": true,
     "extraMetadata": {
       "main": "electron/main.js"
     }
@@ -69,6 +69,7 @@
     "electron": "31.3.0",
     "electron-builder": "26.0.12",
     "electron-rebuild": "^3.2.9",
+    "rimraf": "^5.0.5",
     "wait-on": "^7.2.0"
   },
   "dependencies": {
